fixed results view NaN with if @users_age.any? & truncate blacklists for PG::UniqueViolation duplicate key error

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -557,7 +557,7 @@ html, body {
 /* general submit button */
 .submit_btn {
   border: 2px solid rgba(1,1,1,1);
-  margin: 0 0 30px 0;
+  margin: 0 0 25px 0;
   padding: 6px;
   background-color: rgba(255,255,255,1);
   text-align: center;
